force-app/main/default/objects/Profile_Ids__c/Profile_Ids__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Profile Ids</label>
</CustomObject>