force-app/main/default/objects/Profile_Ids__c/fields/CAO__c.field-meta.xml
<CustomField>
    <fullName>CAO__c</fullName>
    <defaultValue>&quot;00ef0000000QSxdAAG&quot;</defaultValue>
    <label>CAO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>