force-app/main/default/objects/Profile_Ids__c/fields/System_Administrator__c.field-meta.xml
<CustomField>
    <fullName>System_Administrator__c</fullName>
    <defaultValue>&quot;00ei00000016T4BAAU&quot;</defaultValue>
    <label>System Administrator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>