force-app/main/default/objects/Profile_Ids__c/fields/System_Administrator_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>System_Administrator_Read_Only__c</fullName>
    <defaultValue>&quot;00ei0000001XP9TAAW&quot;</defaultValue>
    <description>System Administrator Read Only Profile Id</description>
    <label>System Administrator Read Only</label>
    <length>18</length>
    <type>Text</type>
</CustomField>